# kaibloomberg

./: .gitignore  Cargo.toml  README.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: rust-reviewer.md  ui-tui-architect.md
.claude/commands/: review.md  run-app.md  rust-check.md
.claude/hooks/: block-dangerous.sh  format-rust.sh  notify-stop.sh
.claude/rules/: data-fetching.md  rust-style.md
.claude/skills/rust-quality-gate/: SKILL.md
src/: app.rs  main.rs
src/app_data/: chart.rs  holdings.rs  mod.rs  news.rs  options.rs
src/ui/: mod.rs  options.rs  summary.rs  tui_state.rs
src/utils/: errors.rs  mod.rs
