[package]
name = "kaibloomberg"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
tui-piechart = "0.3"
crossterm = "0.29"
tokio = { version = "1.49", features = ["full"] }
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
url = "2.5.8"
